<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bboat.boatwrightatmbranchlocator.ui.FindLocationsDialogFragment">

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/find_locations"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/nearMeTab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/find_atm_and_branch_locations_near_your_current_location" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/addressTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/fl_til_streetAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true">

                        <EditText
                            android:id="@+id/fl_et_streetAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/street_address"
                            android:inputType="textCapWords" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/fl_til_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/fl_et_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/city"
                            android:inputType="textCapWords" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/fl_til_state"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/fl_et_state"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/state"
                                android:inputType="textCapWords" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/fl_til_zip"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/fl_et_zip"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/zip"
                                android:inputType="number" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/coordsTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/fl_til_lat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/fl_et_lat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/latitude"
                                android:inputType="numberDecimal|numberSigned" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/fl_til_lng"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/fl_et_lng"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/longitude"
                                android:inputType="numberDecimal|numberSigned" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

    </TabHost>

    <Button
        android:id="@+id/fl_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>
